--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -16,15 +16,15 @@
             android:id="@+id/rb_english"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_english"
+            android:drawableEnd="@drawable/ic_english"
             android:text="@string/english" />
 
         <RadioButton
-            android:id="@+id/rb_rusia"
+            android:id="@+id/rb_indonesia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_indonesia"
-            android:text="@string/rusia" />
+            android:drawableEnd="@drawable/ic_indonesia"
+            android:text="@string/indonesia" />
     </RadioGroup>
 
     <Button
@@ -35,7 +35,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:text="@string/save_language"
-        android:textSize="10sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -43,5 +43,5 @@
         android:layout_margin="5dp"
         android:text="@string/language_note"
         android:textAlignment="center"
-        android:textSize="10dp" />
+        android:textSize="12sp" />
 </LinearLayout>
